# 3dgs-ue4-simulator

./: .env.example  .gitignore  README.md  SIMULATOR_BRIDGE_README.md  bridge_bundle_manifest.json  bundle_bridge_package.py  carla_3dgs_scene_runtime.py  carla_background_gs_bridge.py  carla_xodr_live_3dgs_bridge.py  carla_xodr_live_3dgs_bridge_with_instances.py  carla_xodr_live_3dgs_modular_bridge.py  carla_xodr_live_3dgs_scene_package_bridge.py  coordinate_calibration_identity.json  environment.yml  load_xodr_town_with_instances.py  pose_control_client.py  pose_control_signal.py  pyproject.toml  render_aligned_mapping_or_carla_path_gsplat.py  render_background_gsplat.py  render_interpolated_path_gsplat_pygame.py  requirements-gpu-cu118.txt  requirements.txt  scene_runtime_external_control.py  traffic_bbox_carla_loader.py  traffic_bbox_projection_from_package.py
docs/: GITHUB_DEPLOY.md  SIMULATOR_BRIDGE_README.md
examples/: scene_package.example.json
scripts/: check_environment.py
src/gs_carla/: __init__.py  bridge_bundle_manifest.json  bundle_bridge_package.py  carla_3dgs_scene_runtime.py  carla_background_gs_bridge.py  carla_xodr_live_3dgs_bridge.py  carla_xodr_live_3dgs_bridge_with_instances.py  carla_xodr_live_3dgs_modular_bridge.py  carla_xodr_live_3dgs_scene_package_bridge.py  export_drivestudio_background.py  export_instance_bboxes_to_carla_collision.py  load_xodr_town_and_dump_poses.py  load_xodr_town_with_instances.py  make_3dgs_carla_scene_package.py  pose_control_client.py  pose_control_signal.py  render_aligned_mapping_or_carla_path_gsplat.py  (+5 more)
